--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: 'Montserrat', sans-serif;
+    transition: .3s;
+    text-decoration: none;
+    overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: 'TS Block Bold';
+    font-style: normal;
+    font-weight: 400;
+    src: local('TS Block Bold'), url('https://fonts.cdnfonts.com/s/8758/TS Block Bold.woff') format('woff');
 }
+
+.sidebar {
+    background-color: #ff5100;
+    width: 0px;
+    height: 100%;
+    line-height: 15px;
+    overflow: hidden;
+
+}
+
+.openSidebar{
+    width: 300px;
+}
+
+#root {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    ;
+}
+
+#main {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(17, 17, 17);
+    overflow: hidden;
+
+}
+
+body{
+    overflow: hidden;
+}
+
+.link {
+    color: black;
+    opacity: .5;
+    display: flex;
+    margin-left: 25px;
+
+}
+
+.link:hover {
+    opacity: 1;
+    text-decoration: none;
+    color: black;
+}
+
+.link>label {
+    opacity: 0;
+    margin-right: 30px;
+}
+
+.link:hover>label {
+    opacity: 1;
+
+
+}
+
+.active {
+    color: white;
+    opacity: 1;
+}
+
+.active>label {
+    opacity: 1;
+}
+
+.active:hover {
+    color: white;
+    opacity: 1;
+}
+
+.active:hover>label {
+    color: white;
+    opacity: 1;
+}
+
+.links {
+    position: relative;
+    top: 15%;
+}
+
+
+
+.skull {
+
+    opacity: .2;
+}
+
+
+.skullLine {
+
+    opacity: .3;
+}
+
+.section {
+    max-height: 100%;
+    overflow: hidden;
+}
+
+.text-container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.home-text {
+    font-family: "TS Block Bold", sans-serif;
+    font-size: 100px;
+}
+
+
+
+.flameLine {
+   
+
+    opacity: .2;
+}
+
+.flame {
+    opacity: .3;
+  
+
+}
+
+#flameLine,
+#flame {
+    width: 100%; 
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, -50%);
+    filter: hue-rotate(165deg) saturate(1);
+}
+
+#skull,
+#skullLine {
+    width: 50%; 
+    position: absolute;
+    left: 50%;
+    top: 85%;
+    transform: translate(-50%, -50%);
+    filter: grayscale(1);
+}
+
+.bar1, .bar2, .bar3 {
+    width: 3px;
+    height: 3px;
+    margin: 6px 0;
+    border-radius: 25px;
+  }
+
+.btnActive > .bar1,.btnActive > .bar2,.btnActive > .bar3{
+    width: 35px;
+}
+
+.svgContainer{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    }
+    .btn:focus, .btn:active {
+        outline: none !important;
+        box-shadow: none !important;
+      }
+/* mobile */
+@media only screen and (max-width: 600px) {
+
+    
+    .home-text {
+        font-size: 25px;
+    }
+
+    
+    #flameLine,
+    #flame {
+        left: 55%;
+        width: 150%; 
+    }
+    
+    #skull,
+    #skullLine {
+        width: 100%; 
+        left: 50%;
+        top: 50%;
+    }
+    
+
+    
+  }
