--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,11 @@
 
 }
 
-.openSidebar{
+.openSidebar {
     width: 300px;
 }
+
+
 
 #root {
     display: flex;
@@ -41,7 +43,7 @@
 
 }
 
-body{
+body {
     overflow: hidden;
 }
 
@@ -110,6 +112,14 @@ body{
 .section {
     max-height: 100%;
     overflow: hidden;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    opacity: 0;
+    display: block;
 }
 
 .text-container {
@@ -128,30 +138,54 @@ body{
 
 
 .flameLine {
-   
+
 
     opacity: .2;
 }
 
 .flame {
     opacity: .3;
-  
 
+
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0, 40px, 0)
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    from {
+        transform: translate3d(0, 40px, 0)
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+        opacity: 1
+    }
 }
 
 #flameLine,
 #flame {
-    width: 100%; 
+    width: 100%;
     position: absolute;
     left: 50%;
     top: 100%;
     transform: translate(-50%, -50%);
     filter: hue-rotate(165deg) saturate(1);
+
+
 }
 
 #skull,
 #skullLine {
-    width: 50%; 
+    width: 50%;
     position: absolute;
     left: 50%;
     top: 85%;
@@ -159,48 +193,79 @@ body{
     filter: grayscale(1);
 }
 
-.bar1, .bar2, .bar3 {
+.bar1,
+.bar2,
+.bar3 {
     width: 3px;
     height: 3px;
     margin: 6px 0;
     border-radius: 25px;
-  }
+}
 
-.btnActive > .bar1,.btnActive > .bar2,.btnActive > .bar3{
+.btnActive>.bar1,
+.btnActive>.bar2,
+.btnActive>.bar3 {
     width: 35px;
 }
 
-.svgContainer{
+.svgContainer {
     position: relative;
     width: 100vw;
     height: 100vh;
-    }
-    .btn:focus, .btn:active {
-        outline: none !important;
-        box-shadow: none !important;
-      }
+
+}
+
+.btn:focus,
+.btn:active {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+#about{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.skill{
+    font-size: 25px;
+    width: 100px;
+}
+
+.p-text{
+    font-size: 18px;
+}
+
+
 /* mobile */
 @media only screen and (max-width: 600px) {
 
-    
+
     .home-text {
         font-size: 25px;
     }
 
-    
+
     #flameLine,
     #flame {
         left: 55%;
-        width: 150%; 
+        width: 150%;
     }
-    
+
     #skull,
     #skullLine {
-        width: 100%; 
+        width: 100%;
         left: 50%;
         top: 50%;
     }
+
+    .skill{
+        font-size: 15px;
+        width: 100px;
+    }
+    .p-text{
+        font-size: 12px;
+    }
     
 
-    
-  }
+
+}
